combined Android fastd patches * Update CMake files to work with android-cmake * Workarounds for missing POSIX APIs in Android NDK (epoll_pwait etc) * Control channel for opening TUN device from Android side

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,12 @@
 set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS _GNU_SOURCE __APPLE_USE_RFC_3542)
 set(FASTD_CFLAGS "${PTHREAD_CFLAGS} -std=c99 ${UECC_CFLAGS_OTHER} ${NACL_CFLAGS_OTHER} ${OPENSSL_CRYPTO_CFLAGS_OTHER} ${JSONC_CFLAGS_OTHER} ${CFLAGS_LTO} -Wall")
 
+if(ANDROID)
+    # Android 5.0+ requires PIE binaries.
+    set(FASTD_CFLAGS "-fPIE ${FASTD_CFLAGS}")
+    set(ADDITIONAL_SRCS android_ctrl_sock.c)
+endif(ANDROID)
+
 include_directories(${FASTD_SOURCE_DIR} ${FASTD_BINARY_DIR}/src)
 link_directories(${UECC_LIBRARY_DIRS} ${NACL_LIBRARY_DIRS} ${OPENSSL_CRYPTO_LIBRARY_DIRS} ${JSONC_LIBRARY_DIRS})
 
@@ -18,6 +24,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/fastd_config.h.in ${CMAKE_CURRENT_BIN
 BISON_TARGET(fastd_config_parse config.y ${CMAKE_CURRENT_BINARY_DIR}/config.yy.c)
 
 add_executable(fastd
+  ${ADDITIONAL_SRCS}
   async.c
   capabilities.c
   config.c
@@ -44,7 +51,14 @@ add_executable(fastd
   ${BISON_fastd_config_parse_OUTPUTS}
 )
 set_property(TARGET fastd PROPERTY COMPILE_FLAGS "${FASTD_CFLAGS}")
-set_property(TARGET fastd PROPERTY LINK_FLAGS "${PTHREAD_LDFLAGS} ${UECC_LDFLAGS_OTHER} ${NACL_LDFLAGS_OTHER} ${OPENSSL_CRYPTO_LDFLAGS_OTHER} ${JSONC_LDFLAGS_OTHER} ${LDFLAGS_LTO}")
+
+set(FASTD_LDFLAGS "${PTHREAD_LDFLAGS} ${UECC_LDFLAGS_OTHER} ${NACL_LDFLAGS_OTHER} ${OPENSSL_CRYPTO_LDFLAGS_OTHER} ${JSONC_LDFLAGS_OTHER} ${LDFLAGS_LTO}")
+if(ANDROID)
+    # Android 5.0+ requires PIE binaries.
+    set(FASTD_LDFLAGS "-fPIE -pie ${FASTD_LDFLAGS}")
+endif(ANDROID)
+
+set_property(TARGET fastd PROPERTY LINK_FLAGS "${FASTD_LDFLAGS}")
 set_property(TARGET fastd APPEND PROPERTY INCLUDE_DIRECTORIES ${CAP_INCLUDE_DIR} ${NACL_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS})
 target_link_libraries(fastd protocols methods ciphers macs ${RT_LIBRARY} ${CAP_LIBRARY} ${UECC_LIBRARIES} ${NACL_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARIES} ${JSONC_LIBRARIES})
 
