check Android build using ANDROID instead of ANDROID_ABI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
 set_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS _GNU_SOURCE __APPLE_USE_RFC_3542)
 set(FASTD_CFLAGS "${PTHREAD_CFLAGS} -std=c99 ${UECC_CFLAGS_OTHER} ${NACL_CFLAGS_OTHER} ${OPENSSL_CRYPTO_CFLAGS_OTHER} ${JSONC_CFLAGS_OTHER} ${CFLAGS_LTO} -Wall")
 
-if(ANDROID_ABI)
+if(ANDROID)
+    # Android 5.0+ requires PIE binaries.
     set(FASTD_CFLAGS "-fPIE ${FASTD_CFLAGS}")
-endif(ANDROID_ABI)
+endif(ANDROID)
 
 include_directories(${FASTD_SOURCE_DIR} ${FASTD_BINARY_DIR}/src)
 link_directories(${UECC_LIBRARY_DIRS} ${NACL_LIBRARY_DIRS} ${OPENSSL_CRYPTO_LIBRARY_DIRS} ${JSONC_LIBRARY_DIRS})
@@ -50,10 +51,10 @@ add_executable(fastd
 set_property(TARGET fastd PROPERTY COMPILE_FLAGS "${FASTD_CFLAGS}")
 
 set(FASTD_LDFLAGS "${PTHREAD_LDFLAGS} ${UECC_LDFLAGS_OTHER} ${NACL_LDFLAGS_OTHER} ${OPENSSL_CRYPTO_LDFLAGS_OTHER} ${JSONC_LDFLAGS_OTHER} ${LDFLAGS_LTO}")
-if(ANDROID_ABI)
+if(ANDROID)
     # Android 5.0+ requires PIE binaries.
     set(FASTD_LDFLAGS "-fPIE -pie ${FASTD_LDFLAGS}")
-endif(ANDROID_ABI)
+endif(ANDROID)
 
 set_property(TARGET fastd PROPERTY LINK_FLAGS "${FASTD_LDFLAGS}")
 set_property(TARGET fastd APPEND PROPERTY INCLUDE_DIRECTORIES ${CAP_INCLUDE_DIR} ${NACL_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS})
